objects/LAT_Account_product_payment__c.object
<CustomObject>
    <description>This object is used to load and manage data regarding products and accounts.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts products payments</relationshipLabel>
        <relationshipName>Accounts_products_payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerCountryAN8Code__c</fullName>
        <description>This field recieves a external id for Account.</description>
        <externalId>true</externalId>
        <label>Customer Country AN8 Code</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalUniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Accounts products payments</relationshipLabel>
        <relationshipName>LAT_Accounts_products_payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MultipleQuantity__c</fullName>
        <label>Multiple quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentConditionDescription__c</fullName>
        <description>Used in an aggregateResults query</description>
        <label>Payment condition description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentConditionExternalId__c</fullName>
        <externalId>true</externalId>
        <label>Payment Condition External Id</label>
        <length>46</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentCondition__c</fullName>
        <description>Used in an aggregateResults query</description>
        <label>Payment condition</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment terms</label>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Accounts products payments</relationshipLabel>
        <relationshipName>Accounts_products_payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PercentualBonus__c</fullName>
        <label>Percentual bonus</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductExternalId__c</fullName>
        <externalId>true</externalId>
        <label>Product External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Accounts products payments</relationshipLabel>
        <relationshipName>Accounts_products_payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarehouseCode__c</fullName>
        <label>Warehouse code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Account product payment</label>
    <listViews>
        <fullName>All_AR_y_UY</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>LAT_Product__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>ALMACEN DE PICADAS</value>
        </filters>
        <filters>
            <field>ProductExternalId__c</field>
            <operation>contains</operation>
            <value>6-</value>
        </filters>
        <label>All AR y UY</label>
        <language>es_MX</language>
    </listViews>
    <listViews>
        <fullName>X2037022</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductExternalId__c</field>
            <operation>equals</operation>
            <value>6-2037022</value>
        </filters>
        <label>2037022</label>
        <language>es_MX</language>
    </listViews>
    <listViews>
        <fullName>a5_495</fullName>
        <columns>NAME</columns>
        <columns>LAT_Product__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductExternalId__c</field>
            <operation>contains</operation>
            <value>6-10752</value>
        </filters>
        <label>6-10752</label>
        <language>es_MX</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>app-{0000000000}</displayFormat>
        <label>Account product payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts products payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>